# yapat

./: .gitignore  .readthedocs.yaml  Dockerfile  README.md  config.json  main.py  pyproject.toml  requirements.txt
docs/: annotation.rst  conf.py  contributing.rst  datasets.rst  deployment.rst  docker.rst  index.rst  projects.rst  quickstart.rst  requirements.txt  visualization.rst
docs/source/: conf.py
src/: .env  .env.development  __init__.py  app.py  callbacks.py  celery_tasks.py  extensions.py  gunicorn_config.py  layout.py  schema.py  schema_model.py  tasks.py
src/assets/: all.min.css  style.css
src/clustering/: __init__.py  affinity.py  dbscan.py  hdbscan.py  kmeans.py  optics.py  spectral.py
src/components/: footer.py  login.py  navbar.py
src/dimensionality_reduction/: __init__.py  pca.py  tsne.py  umap.py  umap_reducer.py  umap_reduction.py
src/embeddings/: __init__.py  acoustic_indices.py  birdnet.py  vae.py
src/evaluations/: __init__.py  clustering_evaluation.py  embedding_evaluation.py  entropy_evaluation.py  explained_variance_evaluation.py
src/pages/: __init__.py  annotate.py  home.py  login.py  logout.py  project.py  register.py
src/pages/annotate/: callbacks.py  layout.py  model.py  sampling.py
src/pages/explore/: callbacks.py  layout.py
src/utils/: __init__.py  extensions.py  utils.py
src/visualizations/: __init__.py  cluster_temporal_histogram.py  cluster_time_grid.py  rose_plot.py  state_space_visualization.py  time_series_plot.py
tests/: test_base_embedding.py  test_chunk_audio.py  test_embedding_vae.py  test_pipeline.py
(+12 files in other folders)
